recursion.cons.lessons.recursion.cons.Remove.scala.error
remove:5: error: type mismatch;
 found   : List[Int]
 required: Int
		l.tail::remove(l.tail, v);
                      ^remove:4: error: type mismatch;
 found   : Unit
 required: List[Int]
	if(l.head == v)
        ^